[#12297] refactor(secret): Write secrets after entity persist on create
Persist catalog/schema/fileset metadata first so already-exists failures
do not write provider secrets. Shorten the related unit test names and
bodies.

Co-authored-by: Cursor <cursoragent@cursor.com>